@@ -1,3 +1,9 @@
+2008-06-21  Tor Lillqvist  <tml@novell.com>
+
+	* glib/gstdio.c: Improve Windows-specific parts of
+	documentation. Mention the different C library issue in more
+	places.
+
 2008-06-21  Stefan Kost  <ensonic@users.sf.net>
 
 	* docs/reference/gobject/gobject-sections.txt:
